Updated resume link

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 										<p>Hello everybody! I'm an undergraduate student obtaining Computer Information Systems degree.<br>
 										Currently working as a <b>Python Backend Developer</b>. Learning <strong>Data Science</strong> in my free time.</p>
 										<ul class="actions">
-											<li><a href="https://docs.google.com/document/d/1visLwTgVlOu9p2jQWY_Tk3P155SqyeSM/edit?usp=sharing&ouid=113597689482007388020&rtpof=true&sd=true" class="button">View Resume</a></li>
+											<li><a href="https://1drv.ms/w/s!AkINovIsVl7Wrwy2_6KDxH_zncyZ?e=FNEoh9" class="button">View Resume</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/profile_photo.jpg" alt="Profile picture" /></span>
